manifests/canonical-com/staging/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: staging-canonical-com
  namespace: staging
spec:
  selector:
    app: staging.canonical.com
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
